--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-to-print": "^3.1.1",
     "yup": "^1.7.0",
     "zod": "^4.0.17"
   },
