--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "labmanagementsystem",
+  "name": "health-inn-services-laboratory",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,9 +18,10 @@
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
     "cloudinary": "^2.7.0",
+    "dotenv": "^17.2.1",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.2",
     "mongoose": "^8.17.2",
     "multer": "^2.0.2",
     "next": "15.5.0",
